--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,18 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Secret">Secret</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Register">Register</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Logout">Logout</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         @RenderBody()
     </main>
