--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Login</h1>
 
-<form asp-area="" asp-controller="Home" asp-action="Login" method="post">
+<form asp-area="" asp-controller="Account" asp-action="Login" method="post">
     <input type="text" name="username" value="" />
     <input type="text" name="password" value="" />
     <button type="submit">Login</button>
