--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Register</h1>
 
-<form asp-area="" asp-controller="Home" asp-action="Register" method="post">
+<form asp-area="" asp-controller="Account" asp-action="Register" method="post">
     <input type="text" name="username" value="" />
     <input type="text" name="password" value="" />
     <button type="submit">Register</button>
