#17 Add Database Context, #18 Seed Database, #20 Add Person Model (Inheritance) plus more: #6, #7. #8, #9, #10, #11, #12, #13, #14, #15, #16 etc.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@model SchoolNetwork.Models.ApplicationUserViewModel
+@using SchoolNetwork.Models
+
 @{
     ViewData["Title"] = "Register";
 }
@@ -6,7 +8,41 @@
 <h1>Register</h1>
 
 <form asp-area="" asp-controller="Account" asp-action="Register" method="post">
-    <input type="text" name="username" value="" />
-    <input type="text" name="password" value="" />
+    <div class="form-group">
+        <label asp-for="FirstMidName" class="control-label"></label>
+        <input asp-for="FirstMidName" class="form-control" />
+        <span asp-validation-for="FirstMidName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="LastName" class="control-label"></label>
+        <input asp-for="LastName" class="form-control" />
+        <span asp-validation-for="LastName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Role" class="control-label"></label>
+        <select asp-for="Role"  asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
+            <option>Select ...</option>
+        </select>
+        <span asp-validation-for="Role" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Email" class="control-label"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="UserName" class="control-label"></label>
+        <input asp-for="UserName" class="form-control" />
+        <span asp-validation-for="UserName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Password" class="control-label"></label>
+        <input asp-for="Password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
     <button type="submit">Register</button>
 </form>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
