--- a/Views/Assignment/_QuestionPreview.cshtml
+++ b/Views/Assignment/_QuestionPreview.cshtml
@@ -7,9 +7,21 @@
     @Html.HiddenFor(m => m.AssignmentID, new { @class = "id" })
     <h3>@Html.DisplayFor(m => m.Title)</h3>
     <ul>
-    @foreach (var answer in Model.Answers)
-    {
-        @Html.Partial("_AnswerPreview", answer)
-    }
+        @foreach (var answer in Model.Answers)
+        {
+            @Html.Partial("_AnswerPreview", answer)
+        }
     </ul>
+}
+
+
+@{
+    /*
+    @foreach (var a in Model.Answers)
+        {
+            <li>
+                <label>@a.Title</label><input type="checkbox" name="selectAnswer[@a.AnswerID]"/>
+            </li>
+        }
+    */
 }
