--- a/Views/Assignment/Finish.cshtml
+++ b/Views/Assignment/Finish.cshtml
@@ -7,18 +7,21 @@
 
 <h1>Finish</h1>
 
+<ul>
+    <li><a asp-area="" asp-controller="Assignment" asp-action="Start" asp-route-id="@Model.Assignment.AssignmentID">Try Again</a></li>
+    <li><a asp-area="" asp-controller="Home" asp-action="Index">Go Home</a></li>
+</ul>
+
+<h3>Date</h3>
 @Model.Result.ResultDate
 
-<h3>Title:</h3>
+<h3>Title</h3>
 @Html.DisplayFor(m => m.Assignment.Title)
 
-<h3>Score:</h3>
+<h3>Score</h3>
 @Html.DisplayFor(m => m.Result.Score)
 
-<hr />
-<a asp-area="" asp-controller="Assignment" asp-action="Start" asp-route-id="@Model.Assignment.AssignmentID">Try Again</a>
-<a asp-area="" asp-controller="Home" asp-action="Index">Go Home</a>
-<hr />
+<div id="chart_div"></div>
 
 <h3>Overview</h3>
 
@@ -38,7 +41,6 @@
                         choice = true;
                     }
                 }
-
 
                 var correct = false;
                 if (Model.Answers[h].Value)
@@ -73,3 +75,29 @@
         }
     </ul>
 }
+
+<!--Load the AJAX API-->
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Choices');
+        data.addColumn('number', 'Points');
+        data.addRows([
+            ['Correct', @Model.Result.Score],
+            ['Wrong', @Model.Assignment.Value - @Model.Result.Score]
+        ]);
+
+        var options = {
+            'title': 'My score',
+            'width': 400,
+            'height': 300
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+    }
+</script>
