--- a/Views/Assignment/Index.cshtml
+++ b/Views/Assignment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<SchoolNetwork.Models.Assignment>
 
 @{
     ViewData["Title"] = "Assignments";
@@ -6,3 +6,49 @@
 
 <h1>Assignments</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AssignmentID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ApplicationUser.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Course.Title)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AssignmentID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ApplicationUser.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Course.Title)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AssignmentID">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.AssignmentID">Details</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
