--- a/Views/Assignment/Finish.cshtml
+++ b/Views/Assignment/Finish.cshtml
@@ -7,10 +7,13 @@
 
 <h1>Finish</h1>
 
-<ul>
-    <li><a asp-area="" asp-controller="Assignment" asp-action="Start" asp-route-id="@Model.Assignment.AssignmentID">Try Again</a></li>
-    <li><a asp-area="" asp-controller="Home" asp-action="Index">Go Home</a></li>
-</ul>
+<nav>
+    <ul>
+        <li><a asp-area="" asp-controller="Assignment" asp-action="Start" asp-route-id="@Model.Assignment.AssignmentID">Try Again</a></li>
+        <li><a asp-area="" asp-controller="Home" asp-action="Index">Go Home</a></li>
+        <li><a asp-area="" asp-controller="Assignment" asp-action="Review" asp-route-id="@Model.Assignment.AssignmentID">Review</a></li>
+    </ul>
+</nav>
 
 <h3>Date</h3>
 @Model.Result.ResultDate
@@ -22,63 +25,65 @@
 @Html.DisplayFor(m => m.Result.Score)
 
 <div id="chart_div"></div>
+<div class="overview">
+    <h3>Overview</h3>
+    @for (int i = 0; i < Model.Questions.Count; i++)
+    {
+        <div class="question-preview">
+            @Html.DisplayFor(m => m.Questions[i].Title)
 
-<h3>Overview</h3>
-
-@for (int i = 0; i < Model.Questions.Count; i++)
-{
-    @Html.DisplayFor(m => m.Questions[i].Title)
-    <ul>
-        @for (int h = 0; h < Model.Answers.Count; h++)
-        {
-            if (Model.Answers[h].QuestionID == Model.Questions[i].QuestionID)
-            {
-                var choice = false;
-                for (int j = 0; j < Model.Choices.Count; j++)
+            <ul>
+                @for (int h = 0; h < Model.Answers.Count; h++)
                 {
-                    if (Model.Answers[h].AnswerID == Model.Choices[j].AnswerID)
+                    if (Model.Answers[h].QuestionID == Model.Questions[i].QuestionID)
                     {
-                        choice = true;
+                        var choice = false;
+                        for (int j = 0; j < Model.Choices.Count; j++)
+                        {
+                            if (Model.Answers[h].AnswerID == Model.Choices[j].AnswerID)
+                            {
+                                choice = true;
+                            }
+                        }
+
+                        var correct = false;
+                        if (Model.Answers[h].Value)
+                        {
+                            correct = true;
+                        }
+
+                        var color = "black";
+
+                        @if (correct == true)
+                        {
+                            color = "green";
+                        }
+                        else if (choice == true && correct != true)
+                        {
+                            color = "red";
+                        }
+                        else
+                        {
+                            color = "black";
+                        }
+
+                        var flag = "";
+
+                        @if (choice == true)
+                        {
+                            flag = "* Your Choice";
+                        }
+
+                        <div class="answer-preview"><li><p style="color: @color">@Html.DisplayFor(m => m.Answers[h].Title) @flag</p></li></div>
                     }
                 }
-
-                var correct = false;
-                if (Model.Answers[h].Value)
-                {
-                    correct = true;
-                }
-
-                var color = "black";
-
-                @if (correct == true)
-                {
-                    color = "green";
-                }
-                else if (choice == true && correct != true)
-                {
-                    color = "red";
-                }
-                else
-                {
-                    color = "black";
-                }
-
-                var flag = "";
-
-                @if (choice == true)
-                {
-                    flag = "* Your Choice";
-                }
-
-                <li><p style="color: @color">@Html.DisplayFor(m => m.Answers[h].Title) @flag</p></li>
-            }
-        }
-    </ul>
-}
-
-<!--Load the AJAX API-->
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
+            </ul>
+        </div>
+    }
+</div>
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
 
@@ -100,4 +105,4 @@
         var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
         chart.draw(data, options);
     }
-</script>
+    </script>
