--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/css/default.css" rel="stylesheet" type="text/css" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
@@ -16,10 +17,11 @@
             <ul>
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="Secret">Secret</a></li>
+                <li><a asp-area="" asp-controller="Assignment" asp-action="">Assignments</a></li>
                 @if (SignInManager.IsSignedIn(User))
                 {
-                    <li>Hello @UserManager.GetUserName(User)!</li>
+                    <li><p>Hello @UserManager.GetUserName(User)!</p></li>
+                    <li><a asp-area="" asp-controller="Account" asp-action="Results">History</a></li>
                     <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
                 }
                 else
@@ -31,8 +33,16 @@
         </nav>
     </header>
     <main>
-        @RenderBody()
+        <div class="banner">
+            <img class="banner-image" src="~/images/banner.jpg" />
+        </div>
+        <div class="content">
+            @RenderBody()
+        </div>
     </main>
+    <footer>
+        <p>Copyright 2020</p>
+    </footer>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
